更新技术文档模板：增加密码学级别详细技术原理折叠展开，移除具体行业硬套

--- a/技术文档模板使用说明.md
+++ b/技术文档模板使用说明.md
@@ -17,11 +17,11 @@
    ↓
 3. 在线交互演示 ← 动手体验
    ↓
-4. 应用场景 ← 4大领域（医疗/金融/政务/互联网）
+4. 应用场景 ← 根据技术特点选择场景（不硬套行业）
    ↓
 5. 技术优势 ← 对比展示
    ↓
-6. 了解更多 ← 深度资源
+6. 了解更多 ← 密码学级别深度解析（折叠展开）
 ```
 
 ---
@@ -99,17 +99,25 @@
 **目标**：让读者理解"这个技术能用在哪里"
 
 **结构**：
-- **医疗健康**（痛点 + 解决方案 + 价值）
-- **金融风控**（痛点 + 解决方案 + 价值）
-- **政务数据**（痛点 + 解决方案 + 价值）
-- **互联网 / 广告**（痛点 + 解决方案 + 价值）
+- **场景类型 A**（痛点 + 解决方案 + 价值）
+- **场景类型 B**（痛点 + 解决方案 + 价值）
+- **场景类型 C**（痛点 + 解决方案 + 价值）
+- **场景类型 D**（痛点 + 解决方案 + 价值）
 
 **写作要点**：
 - ✅ 每个场景独立完整
 - ✅ 具体化（不要太抽象）
 - ✅ 突出业务价值
 - ✅ 流程化展示（1-2-3步）
+- ❌ 不要硬套行业（根据技术特点选择合适场景）
 - ❌ 避免重复（不要所有场景都做交互演示）
+
+**场景类型说明**：
+- 不同技术适用的行业范围不同
+- PSI 适合：医疗、金融、政务、广告
+- MPC 可能适合：科研、供应链、保险等
+- FL 可能适合：边缘计算、移动设备、物联网等
+- **根据技术特点灵活调整，不要强行套用四大行业**
 
 ---
 
@@ -131,17 +139,59 @@
 
 ### 6️⃣ 了解更多
 
-**目标**：为深度学习者提供资源
+**目标**：为深度学习者提供详细技术解析和资源
 
 **结构**：
-- **相关技术文档**（3个核心算法，折叠式详情）
+- **关键技术详解**（3-4个核心算法，折叠式详情，**密码学级别深度**）
+  - 核心算法1：数学定义、对比、应用、为什么无法破解
+  - 核心算法2：生活类比、应用场景、优化方案、数学原理
+  - 核心算法3：不安全示例、安全实现、防御机制
+  - 完整流程：流程图、安全性对比、技术组合、性能对比
+  - 深入学习资源：书籍、论文、博客、源代码
 - **官方资源**（4个链接：文档/快速开始/论文/GitHub）
 - **交流与支持**（3个渠道：Issues/论坛/博客）
 
 **写作要点**：
-- ✅ 使用 `<details>` 折叠，避免太长
+- ✅ **技术深度**：参考 PSI 密码学详解的颗粒度
+  - 数学公式/代码示例
+  - 对比表格（传统 vs 新技术）
+  - 生活化类比（帮助理解）
+  - 安全性分析（为什么无法破解）
+  - 性能数据（时间复杂度、实际耗时）
+- ✅ **折叠展开**：使用 `::: details` 标签
+  - 每个算法独立折叠
+  - 点击后展开完整内容
+  - 避免页面过长影响阅读
+- ✅ **完整性**：
+  - 什么是（定义）
+  - 为什么用（优势）
+  - 怎么用（应用）
+  - 怎么防（安全性）
+  - 怎么优化（性能）
 - ✅ 链接有效性（确保可访问）
 - ✅ 分层：入门 → 进阶 → 深度
+
+**参考示例**（PSI 技术原理）：
+```markdown
+::: details 椭圆曲线加密（ECC）详解
+
+### 什么是椭圆曲线？
+- 数学定义：y² = x³ + ax + b
+- 可视化图形
+- 与 RSA 对比表格
+
+### 椭圆曲线在 PSI 中的应用
+- ECDH-PSI 协议
+- 8步完整流程
+- 关键点说明
+
+### 为什么无法暴力破解？
+- 离散对数问题
+- 计算难度对比
+- 时间估算（10²² 年）
+
+:::
+```
 
 ---
 
