优化MPC文档：改机构替代银行+增加场景目标+修正技术对比+减少图标+更新模板规范

--- a/技术文档模板使用说明.md
+++ b/技术文档模板使用说明.md
@@ -197,11 +197,40 @@
 
 ## 🎨 设计规范
 
-### 图标使用
+### 图标使用（重要！）
 
-- **标题图标**：谨慎使用，只在关键位置（如"在线交互演示"）
-- **列表图标**：✅❌⭐等，简洁明了
-- **避免**：过度装饰，影响专业性
+**原则：谨慎使用，受众包含国企，要求严肃专业**
+
+- **禁止使用的图标**：
+  - ❌ 标题中的装饰性图标（🎯📊🚀💡等）
+  - ❌ 按钮中的图标（🔒⚡🎉等）
+  - ❌ 卡片标题中的图标
+  - ❌ 任何可能显得不够严肃的表情符号
+
+- **允许使用的位置**：
+  - ✅ 功能性图标：✅（正确）❌（错误）⭐（星级评分）
+  - ✅ 列表标记：仅用于明确表示对错或评级
+  - ✅ 极少数关键位置：如需引起注意的核心提示
+
+- **替代方案**：
+  - 用"步骤1"替代 "1️⃣"
+  - 用"注意"替代 "⚠️注意"
+  - 用"提示"替代 "💡提示"
+  - 用简洁文字替代图标
+
+**错误示例**：
+```markdown
+### 🎯 快速体验 MPC
+🚀 Google Colab 演示
+💡 提示：点击后...
+```
+
+**正确示例**：
+```markdown
+### 快速体验 MPC
+Google Colab 演示
+提示：点击后...
+```
 
 ### 颜色方案
 
