优化代码框高度：添加400px限制和滚动条；清理过程性文件

--- a/技术文档标准模板.md
+++ b/技术文档标准模板.md
@@ -174,6 +174,8 @@
 
 #### 代码示例
 
+<div style="max-height: 400px; overflow-y: auto; border: 1px solid #e0e0e0; border-radius: 8px;">
+
 ```python
 # SecretFlow [技术名称] 演示
 # 安装：!pip install -U secretflow
@@ -196,6 +198,8 @@ alice, bob = sf.PYU('alice'), sf.PYU('bob')
 
 sf.shutdown()
 ```
+
+</div>
 
 **代码要求：**
 - ✅ **精简**：30-50行，无冗余注释
