修正Colab安装问题：添加实际的pip install命令

--- a/技术文档标准模板.md
+++ b/技术文档标准模板.md
@@ -178,7 +178,8 @@
 
 ```python
 # SecretFlow [技术名称] 演示
-# 安装：!pip install -U secretflow
+# 第一步：安装 SecretFlow（首次运行需要几分钟）
+!pip install -q -U secretflow
 
 import secretflow as sf
 import pandas as pd  # 或其他必要库
