采用Docker方案替代Colab：简洁展示SecretFlow真实能力

--- a/技术文档标准模板.md
+++ b/技术文档标准模板.md
@@ -151,28 +151,36 @@
 
 </div>
 
-### 📚 深入学习：完整 SecretFlow [技术名称] 实现
+### 深入学习：真实的 SecretFlow [技术名称]
 
-想要体验生产级的 SecretFlow [技术名称] 实现？
+**运行方式：**
 
-<div style="max-width: 800px; margin: 30px auto; padding: 25px; background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%); border-radius: 15px; box-shadow: 0 8px 30px rgba(245, 87, 108, 0.3);">
-  <h4 style="color: white; margin-top: 0; font-size: 1.5em;">🚀 Google Colab 在线演示</h4>
-  <p style="color: white; margin-bottom: 20px; font-size: 1.1em;">
-    包含完整的 [技术名称] 实现、[核心算法] 演示，以及可视化展示。
-  </p>
-  <a href="[Colab链接]" 
-     target="_blank"
-     style="display: inline-block; padding: 12px 30px; background: white; color: #f5576c; text-decoration: none; border-radius: 25px; font-weight: bold; transition: transform 0.2s; box-shadow: 0 4px 15px rgba(255, 255, 255, 0.3); font-size: 1.1em;"
-     onmouseover="this.style.transform='scale(1.05)'"
-     onmouseout="this.style.transform='scale(1)'">
-    ⚡ 打开 Colab 笔记本
-  </a>
-  <p style="color: white; margin-top: 15px; font-size: 0.95em; opacity: 0.9;">
-    💡 提示：点击后会在新标签页打开，可以直接运行代码
-  </p>
+<div style="background: #f5f7fa; padding: 20px; border-radius: 8px; border-left: 4px solid #667eea;">
+
+**🐳 Docker 运行（推荐）**
+
+```bash
+# 下载代码
+curl -O https://你的网站/[技术名称]-secretflow-final.py
+
+# 运行演示
+docker run --rm -v $(pwd):/work secretflow/secretflow-lite-anolis8:latest \
+  python3 /work/[技术名称]-secretflow-final.py
+```
+
+**📥 或者：**[下载代码](../../[技术名称]-secretflow-final.py) 后在本地 Python 3.8+ 环境运行
+
 </div>
 
 #### 代码示例
+
+**代码框样式要求：**
+```html
+<div style="max-height: 400px; overflow-y: auto; border: 1px solid #e0e0e0; border-radius: 8px;">
+```
+- `max-height: 400px`：限制高度，避免页面过长
+- `overflow-y: auto`：超出部分显示滚动条
+- `border` 和 `border-radius`：美化边框
 
 <div style="max-height: 400px; overflow-y: auto; border: 1px solid #e0e0e0; border-radius: 8px;">
 
@@ -202,12 +210,34 @@ sf.shutdown()
 
 </div>
 
-**代码要求：**
-- ✅ **精简**：30-50行，无冗余注释
-- ✅ **聚焦核心**：展示SecretFlow框架核心API
-- ✅ **真实框架**：必须使用真实的SecretFlow组件（SPU/PYU等）
-- ✅ **可运行**：Colab环境下可直接运行
-- ❌ **避免**：不要大量printf说明，不要重复框架优势
+**代码要求（严格遵守）：**
+
+1. **安装命令（必须）**
+   - 第一行必须包含：`!pip install -q -U secretflow`
+   - 使用 `-q` 参数静默安装，减少输出
+   - 在 Colab 中可直接运行
+
+2. **代码长度**
+   - 30-50 行为佳
+   - 只保留核心逻辑
+   - 删除冗余注释
+
+3. **框架核心能力**
+   - ✅ **必须使用**：真实的 SecretFlow 组件（SPU/PYU/sf.init等）
+   - ✅ **展示协议**：明确标注使用的协议（如ECDH_PSI_2PC、ABY3等）
+   - ✅ **真实场景**：使用具体业务场景（医院、银行等）
+
+4. **代码质量**
+   - ❌ **禁止**：过多 print 语句解释框架优势
+   - ❌ **禁止**：在代码中重复说明 SecretFlow 的好处
+   - ❌ **禁止**：多余的 import（如不必要的 load_iris 等）
+   - ❌ **禁止**：添加图标、emoji 等装饰性内容
+   - ✅ **鼓励**：简洁的结果输出（3-5行print）
+
+5. **Colab 兼容性**
+   - 确保在 Colab 环境可以完整运行
+   - 使用 `/tmp/` 目录保存临时文件
+   - 最后调用 `sf.shutdown()` 清理资源
 
 #### 运行结果
 
